--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,10 @@
+html {
+  height: 100%;
+}
+
 body {
   font-family: 'Montserrat', sans-serif;
+  /* background-color: #efefef; */
 }
 
 h1, h2, h3, h4, h5 {
@@ -7,12 +12,14 @@ h1, h2, h3, h4, h5 {
 }
 
 .container {
+  position: relative;
   max-width: 960px;
   margin: 20px auto;
+  min-height: 100vh;
 }
 
 #main {
-  padding: 0 20px;
+  padding: 20px 20px 80px 20px;
 }
 
 .title-img {
@@ -21,16 +28,33 @@ h1, h2, h3, h4, h5 {
   padding: 20px 0;
 }
 
-.divider {
+.divider, .footer-divider {
   width: 100%;
   height: 4px;
-  background-color: #47C2FF;
-  color: #50D7A4;
-  margin-bottom: 40px;
+  background-color: #50D7A4;
+}
+
+.footer-divider {
+  margin: 20px 0 10px 0;
+}
+
+.footer {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  padding-bottom: 30px;
+  font-size: 12px;
+}
+
+.footer-privacy {
+  padding-left: 10px;
+  font-weight: bolder;
 }
 
 a {
   color: #47C2FF;
+  text-decoration: none;
+  font-weight: 900;
 }
 
 a:hover {
@@ -38,6 +62,7 @@ a:hover {
 }
 
 .nav-menu {
+  text-align: center;
   display: flex;
   justify-content: space-between;
   width: 80%;
@@ -47,8 +72,7 @@ a:hover {
 
 .nav-link {
   font-weight: bold;
-  text-decoration: none;
-  font-size: 18px;
+  font-size: 16px;
   padding: 5px 2%;
 }
 
@@ -72,7 +96,6 @@ a:hover {
 }
 
 .blog-list-link {
-  text-decoration: none;
   display: inline-block;
 }
 
@@ -87,4 +110,15 @@ a:hover {
 
 .blog-list-date-spacer {
   padding: 0 8px;
+}
+
+.cover-image {
+  margin: 30px auto;
+}
+
+.game-list-container {
+  text-align: center;
+  display: inline-block;
+  padding: 15px;
+  border-bottom: 3px solid #47C2FF;
 }
