--- a/layouts/page/game-static.html
+++ b/layouts/page/game-static.html
@@ -2,7 +2,8 @@
 
   <main class="static-main">
     <h1>{{ .Title }}</h1>
-    <h3>Release: {{ .Params.releasedate }}</h3>
+    <h3>Released: {{ .Params.releasedate }}</h3>
     {{ .Content }}
   </main>
+  
 {{ end }}
