--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,10 +1,23 @@
-<nav class="nav-menu">
-  {{ $current := . }}
-  {{ range .Site.Menus.main }}
-    {{ $active := $current.IsMenuCurrent "main" . }}
-    {{ $active = or $active (eq .Name $current.Title) }}
-    {{ $active = or $active (and (eq .Name "Blog") (eq $current.Section "blog")) }}
-    {{ $active = or $active (and (eq .Name "Games") (eq $current.Section "games")) }}
-    <a class="nav-link {{ if $active }}active{{ end }}" href="{{ .URL }}">{{ .Name }}</a>
-  {{ end }}
-</nav>
+<div class="navigation">
+  <nav>
+    <ul class="nav-menu">
+      {{ $current := . }}
+      {{ range .Site.Menus.main }}
+
+        {{ $active := $current.IsMenuCurrent "main" . }}
+        {{ $active = or $active (eq .Name $current.Title) }}
+        {{ $active = or $active (and (eq .Name "Blog") (eq $current.Section "blog")) }}
+        {{ $active = or $active (and (eq .Name "Games") (eq $current.Section "games")) }}
+        {{ $active = or $active (and (eq .Name "Projects") (eq $current.Section "projects")) }}
+        <li>
+          <a class="nav-link" href="{{ .URL }}">
+            <span class="desktop-nav {{ if $active }}active{{ end }}">{{ .Name }}</span>
+            <i class="material-icons-outlined mobile-nav {{ if $active }}active{{ end }}">{{ .Pre }}</i>
+          </a>
+        </li>
+        
+      {{ end }}
+    </ul>
+  </nav>
+  <div class="divider"></div>
+</div>
