--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
-  <div class="footer-divider"></div>
+  <div class="divider"></div>
 	<span class="copyright">
-      &copy; 2014 - {{ now.Format "2006" }} Codescapade. All rights reserved.
+      &copy; 2016 - {{ now.Format "2006" }} Codescapade. All rights reserved.
   </span>
   <span><a class="footer-privacy" href="/privacy/">Privacy</a></span>
 </footer>
