--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,10 +6,12 @@
       {{ $titleImage := "images/title.png" | relURL }}
       <img class="title-img" src="{{ $titleImage }}" />
       {{ partial "nav.html" . }}
-      <main id="main" class="one">
+      <main id="main">
         {{ block "main" . }}{{ end }}
       </main>
-      {{ partial "footer.html" }}
+      {{ partial "footer.html" . }}
     </div>
+    {{ $js := "js/script.js" | relURL }}
+    <script src="{{ $js }}"></script>
   </body>
 </html>
