--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,10 @@
 {{ define "main" }}
 
-  <h1>{{ .Title }}</h1>
-  {{ .Content }}
-
+  <div class="row">
+    <div class="one column">
+      <h1>{{ .Title }}</h1>
+      {{ .Content }}
+    </div>
+  </div>
+ 
 {{ end }}
