--- a/layouts/games/single.html
+++ b/layouts/games/single.html
@@ -2,7 +2,7 @@
 
   <main class="static-main">
     <h1>{{ .Title }}</h1>
-    <h3>Release: {{ .Params.releasedate }}</h3>
+    <h3>Release: {{ .Params.releaseDate }}</h3>
     {{ .Content }}
   </main>
   
