--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,6 @@
 html {
   box-sizing: border-box;
   height: 100%;
-  background-color: #fff;
 }
 
 *, *:before, *:after {
@@ -122,7 +121,7 @@ nav ul li a {
 }
 
 #main {
-  padding: 0 20px 2rem 20px;
+  padding: 30px 20px 50px 20px;
   overflow: hidden;
 }
 
@@ -131,6 +130,8 @@ nav ul li a {
 }
 
 .mobile-nav {
+  width: 2.2rem;
+  height: 2.2rem;
   font-size: 2.2rem;
 }
 
@@ -161,6 +162,12 @@ nav ul li a {
 .blog-list-title {
   color: #a6a6a6;
   font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.home-list-title {
+  color: #a6a6a6;
+  font-size: 1.1rem;
   font-weight: bold;
 }
 
@@ -253,4 +260,26 @@ nav ul li a {
 img {
   max-width: 100%;
   height: auto;
+}
+
+img[src$='#floatleft'] {
+  float: left;
+}
+
+img[src$='#floatright'] {
+  float: right;
+}
+
+.feather-icon {
+  width: 2.2rem;
+  height: 2.2rem;
+}
+
+.dark {
+  background-color: #202020;
+  color: #eee;
+}
+
+#sunIcon, #moonIcon {
+  display: none;
 }
