--- a/__sapper__/export/global.css
+++ b/__sapper__/export/global.css
@@ -2,6 +2,8 @@
 	--link: #47C2FF;
 	--link-hover: #50D7A4;
 	--header-color: #a6a6a6;
+	--background: #fff;
+	--color: #111;
 }
 
 html {
@@ -13,9 +15,16 @@ body {
 	--background: #fff;
 	--color: #111;
 	font-family: 'Montserrat', sans-serif;
+	font-size: 1em;
 	background-color: var(--background);
 	color: var(--color);
-	transition: 0.5s;
+	transition: 0.3s;
+}
+
+@media screen and (min-width: 800px) {
+	body {
+		font-size: 1.2em;
+	}
 }
 
 svg {
@@ -94,4 +103,8 @@ code {
   .column {
     float: left;
   }
+}
+
+#disqus_thread {
+	color: white;
 }
